force-app/main/default/objects/Payment_Milestones__c/Payment_Milestones__c.object-meta.xml
<CustomObject>
    <label>Payment Milestones</label>
    <nameField>
        <displayFormat>PM-{0000000}</displayFormat>
        <label>Payment Milestones Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>