force-app/main/default/objects/Payment_Milestones__c/fields/Add_Token_GST__c.field-meta.xml
<CustomField>
    <fullName>Add_Token_GST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Token GST</label>
    <type>Checkbox</type>
</CustomField>