force-app/main/default/objects/Payment_Milestones__c/fields/Amount_Paid_Old__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_Old__c</fullName>
    <label>Amount Paid Old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>