force-app/main/default/objects/Payment_Milestones__c/fields/Asterisk__c.field-meta.xml
<CustomField>
    <fullName>Asterisk__c</fullName>
    <label>Asterisk</label>
    <length>10</length>
    <type>Text</type>
</CustomField>