force-app/main/default/objects/Payment_Milestones__c/fields/Audit_Reason_For_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Audit_Reason_For_Rejection__c</fullName>
    <label>Audit - Reason For Rejection</label>
    <type>TextArea</type>
</CustomField>