force-app/main/default/objects/Payment_Milestones__c/fields/Base_PremiumTemp_For_PS__c.field-meta.xml
<CustomField>
    <fullName>Base_PremiumTemp_For_PS__c</fullName>
    <formula>IF((Charge1Name__c = &apos;Base Premium&apos;) , C1_Amount__c, IF((Charge2Name__c = &apos;Base Premium&apos;) , C2_Amount__c, IF((Charge3Name__c = &apos;Base Premium&apos;) , C3_Amount__c, IF((Charge4Name__c = &apos;Base Premium&apos;) , C4_Amount__c, IF((Charge5Name__c = &apos;Base Premium&apos;) , C5_Amount__c, IF((Charge6Name__c = &apos;Base Premium&apos;) , C6_Amount__c, IF((Charge7Name__c = &apos;Base Premium&apos;) , C7_Amount__c, IF((Charge8Name__c = &apos;Base Premium&apos;) , C8_Amount__c, IF((Charge9Name__c = &apos;Base Premium&apos;) , C9_Amount__c, IF((Charge10Name__c = &apos;Base Premium&apos;) , C10_Amount__c, 0))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base PremiumTemp For PS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>