force-app/main/default/objects/Payment_Milestones__c/fields/Basic_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Basic_Percentage__c</fullName>
    <label>Basic Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>