force-app/main/default/objects/Payment_Milestones__c/fields/Booking_Formula__c.field-meta.xml
<CustomField>
    <fullName>Booking_Formula__c</fullName>
    <formula>Quotation__r.Booking__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking No.</label>
    <type>Text</type>
</CustomField>