force-app/main/default/objects/Payment_Milestones__c/fields/Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status__c</fullName>
    <formula>TEXT(Quotation__r.Booking__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Status</label>
    <type>Text</type>
</CustomField>