force-app/main/default/objects/Payment_Milestones__c/fields/C12_Amount__c.field-meta.xml
<CustomField>
    <fullName>C12_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>C12 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>