force-app/main/default/objects/Payment_Milestones__c/fields/C15_SGST__c.field-meta.xml
<CustomField>
    <fullName>C15_SGST__c</fullName>
    <defaultValue>0</defaultValue>
    <label>C15 SGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>