force-app/main/default/objects/Payment_Milestones__c/fields/C16_SGST__c.field-meta.xml
<CustomField>
    <fullName>C16_SGST__c</fullName>
    <defaultValue>0</defaultValue>
    <label>C16 SGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>