force-app/main/default/objects/Payment_Milestones__c/fields/C18_Amount__c.field-meta.xml
<CustomField>
    <fullName>C18_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>C18 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>