force-app/main/default/objects/Payment_Milestones__c/fields/CFO_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>CFO_Approval_Date__c</fullName>
    <label>CFO Approval Date</label>
    <type>DateTime</type>
</CustomField>