force-app/main/default/objects/Payment_Milestones__c/fields/CFO_Reason_For_Rejection__c.field-meta.xml
<CustomField>
    <fullName>CFO_Reason_For_Rejection__c</fullName>
    <label>CFO - Reason For Rejection</label>
    <type>TextArea</type>
</CustomField>