force-app/main/default/objects/Payment_Milestones__c/fields/CFO_Status__c.field-meta.xml
<CustomField>
    <fullName>CFO_Status__c</fullName>
    <label>CFO Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>