force-app/main/default/objects/Payment_Milestones__c/fields/Charge10Percentage__c.field-meta.xml
<CustomField>
    <fullName>Charge10Percentage__c</fullName>
    <label>Charge 10 Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>