force-app/main/default/objects/Payment_Milestones__c/fields/Charge10SGST__c.field-meta.xml
<CustomField>
    <fullName>Charge10SGST__c</fullName>
    <formula>Quotation__r.Charge10SGST__c*Charge10Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge 10 SGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>