force-app/main/default/objects/Payment_Milestones__c/fields/Charge11IGST__c.field-meta.xml
<CustomField>
    <fullName>Charge11IGST__c</fullName>
    <formula>Quotation__r.Charge11IGST__c* Charge11Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge 11 IGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>