force-app/main/default/objects/Payment_Milestones__c/fields/Charge11Percentage__c.field-meta.xml
<CustomField>
    <fullName>Charge11Percentage__c</fullName>
    <label>Charge 11 Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>