force-app/main/default/objects/Payment_Milestones__c/fields/Charge12CGST__c.field-meta.xml
<CustomField>
    <fullName>Charge12CGST__c</fullName>
    <formula>Quotation__r.Charge12CGST__c*Charge12Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge 12 CGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>