force-app/main/default/objects/Payment_Milestones__c/fields/Charge13CGST__c.field-meta.xml
<CustomField>
    <fullName>Charge13CGST__c</fullName>
    <formula>Quotation__r.Charge13CGST__c*Charge13Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge 13 CGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>