force-app/main/default/objects/Payment_Milestones__c/fields/Charge13Name__c.field-meta.xml
<CustomField>
    <fullName>Charge13Name__c</fullName>
    <label>Charge 13 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>