force-app/main/default/objects/Payment_Milestones__c/fields/Charge14SGST__c.field-meta.xml
<CustomField>
    <fullName>Charge14SGST__c</fullName>
    <formula>Quotation__r.Charge14SGST__c*Charge14Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge 14 SGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>