force-app/main/default/objects/Payment_Milestones__c/fields/Charge15CGST__c.field-meta.xml
<CustomField>
    <fullName>Charge15CGST__c</fullName>
    <formula>Quotation__r.Charge15CGST__c*Charge15Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge 15 CGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>