force-app/main/default/objects/Payment_Milestones__c/fields/Charge17Name__c.field-meta.xml
<CustomField>
    <fullName>Charge17Name__c</fullName>
    <label>Charge 17 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>