force-app/main/default/objects/Payment_Milestones__c/fields/Charge18Name__c.field-meta.xml
<CustomField>
    <fullName>Charge18Name__c</fullName>
    <label>Charge 18 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>