force-app/main/default/objects/Payment_Milestones__c/fields/Charge1Percentage__c.field-meta.xml
<CustomField>
    <fullName>Charge1Percentage__c</fullName>
    <label>Charge 1 Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>