force-app/main/default/objects/Payment_Milestones__c/fields/Charge_11_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Charge_11_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge 11 Lookup</label>
    <referenceTo>ProjectCharges__c</referenceTo>
    <relationshipLabel>Payment Milestones (Charge 11)</relationshipLabel>
    <relationshipName>Payment_MilestonesC0Yz</relationshipName>
    <type>Lookup</type>
</CustomField>