force-app/main/default/objects/Payment_Milestones__c/fields/Charge_11Value__c.field-meta.xml
<CustomField>
    <fullName>Charge_11Value__c</fullName>
    <formula>Quotation__r.Charge11Value__c* Charge11Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge 11Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>