force-app/main/default/objects/Payment_Milestones__c/fields/Charge_13Value__c.field-meta.xml
<CustomField>
    <fullName>Charge_13Value__c</fullName>
    <formula>Quotation__r.Charge13Value__c* Charge13Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge 13Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>