force-app/main/default/objects/Payment_Milestones__c/fields/Charge_14_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Charge_14_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge 14 Lookup</label>
    <referenceTo>ProjectCharges__c</referenceTo>
    <relationshipLabel>Payment Milestones (Charge 14)</relationshipLabel>
    <relationshipName>Payment_MilestonesC0ZT</relationshipName>
    <type>Lookup</type>
</CustomField>