force-app/main/default/objects/Payment_Milestones__c/fields/Charge_14Value__c.field-meta.xml
<CustomField>
    <fullName>Charge_14Value__c</fullName>
    <formula>Quotation__r.Charge14Value__c* Charge14Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge 14Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>