force-app/main/default/objects/Payment_Milestones__c/fields/Cheque_Bounce_Chagres__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Bounce_Chagres__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cheque Bounce Chagres</label>
    <type>Checkbox</type>
</CustomField>