force-app/main/default/objects/Payment_Milestones__c/fields/Cluster_Name__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Name__c</fullName>
    <formula>Quotation__r.Unit__r.Tower__r.Cluster__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cluster Name</label>
    <type>Text</type>
</CustomField>