force-app/main/default/objects/Payment_Milestones__c/fields/Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Collection_Status__c</fullName>
    <label>Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>