force-app/main/default/objects/Payment_Milestones__c/fields/Collection_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Collection_Submission_Date__c</fullName>
    <label>Collection Submission Date</label>
    <type>DateTime</type>
</CustomField>