force-app/main/default/objects/Payment_Milestones__c/fields/Construction_Stage_Actual_CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>Construction_Stage_Actual_CompletionDate__c</fullName>
    <formula>Project_Construction_Stages__r.Actual_date_of_completion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction Stage Actual CompletionDate</label>
    <type>Date</type>
</CustomField>