force-app/main/default/objects/Payment_Milestones__c/fields/Debit_CGST__c.field-meta.xml
<CustomField>
    <fullName>Debit_CGST__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Debit CGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>