force-app/main/default/objects/Payment_Milestones__c/fields/Demand_Approval_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Demand_Approval_Current_Status__c</fullName>
    <label>Demand Approval Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collection Not Submitted</fullName>
            </value>
            <value>
                <fullName>Collection Submitted</fullName>
            </value>
            <value>
                <fullName>Finance Accepted</fullName>
            </value>
            <value>
                <fullName>Finance Rejected</fullName>
            </value>
            <value>
                <fullName>Audit Accepted</fullName>
            </value>
            <value>
                <fullName>Audit Rejected</fullName>
            </value>
            <value>
                <fullName>CFO Accepted</fullName>
            </value>
            <value>
                <fullName>CFO Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>