force-app/main/default/objects/Payment_Milestones__c/fields/Demands_Approved__c.field-meta.xml
<CustomField>
    <fullName>Demands_Approved__c</fullName>
    <formula>IF(AND(TEXT(Collection_Status__c) = &apos;Submitted&apos;, 
TEXT(Finance_Status__c) = &apos;Accepted&apos;, 
TEXT(Audit_Status__c) = &apos;Accepted&apos;, 
TEXT(CFO_Status__c) = &apos;Accepted&apos;), 
True, 
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demands Approved</label>
    <type>Checkbox</type>
</CustomField>