force-app/main/default/objects/Payment_Milestones__c/fields/Development_Charges_Amount__c.field-meta.xml
<CustomField>
    <fullName>Development_Charges_Amount__c</fullName>
    <formula>Quotation__r.Development_Charges_Quot__c *  Development_Charges_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Development Charges Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>