force-app/main/default/objects/Payment_Milestones__c/fields/Finance_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Date__c</fullName>
    <label>Finance Approval Date</label>
    <type>DateTime</type>
</CustomField>