force-app/main/default/objects/Payment_Milestones__c/fields/Finance_Reason_For_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Finance_Reason_For_Rejection__c</fullName>
    <label>Finance - Reason For Rejection</label>
    <type>TextArea</type>
</CustomField>