force-app/main/default/objects/Payment_Milestones__c/fields/Installment__c.field-meta.xml
<CustomField>
    <fullName>Installment__c</fullName>
    <label>Installment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>