force-app/main/default/objects/Payment_Milestones__c/fields/Is_Combination_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Is_Combination_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Combination Milestone</label>
    <type>Checkbox</type>
</CustomField>