force-app/main/default/objects/Payment_Milestones__c/fields/is_demand_raised__c.field-meta.xml
<CustomField>
    <fullName>is_demand_raised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is demand raised</label>
    <type>Checkbox</type>
</CustomField>