force-app/main/default/objects/Payment_Milestones__c/fields/Legacy_booking_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_booking_Id__c</fullName>
    <label>Legacy booking Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>