force-app/main/default/objects/Payment_Milestones__c/fields/Milestone_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Due_Date__c</fullName>
    <label>Milestone Due Date</label>
    <type>Date</type>
</CustomField>