force-app/main/default/objects/Payment_Milestones__c/fields/Milestone_Due_Date_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Due_Date_Arabic__c</fullName>
    <formula>Milestone_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone_Due_Date Arabic</label>
    <type>Date</type>
</CustomField>