force-app/main/default/objects/Payment_Milestones__c/fields/Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name__c</fullName>
    <label>Milestone Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>