force-app/main/default/objects/Payment_Milestones__c/fields/Milestone_Name_Arabic_M__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name_Arabic_M__c</fullName>
    <formula>Asterisk__c &amp;&quot;&quot;&amp; Milestone_Name_Arabic__c</formula>
    <label>Milestone Name_Arabic	M</label>
    <type>Text</type>
</CustomField>