force-app/main/default/objects/Payment_Milestones__c/fields/Milestone_Name_Docgen__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name_Docgen__c</fullName>
    <formula>IF( ISBLANK(Project_Construction_Stages__c) ,   Milestone_Name__c +&quot;(*)&quot; , Milestone_Name__c+&quot;(**)&quot; )</formula>
    <label>Milestone Name Docgen</label>
    <type>Text</type>
</CustomField>