force-app/main/default/objects/Payment_Milestones__c/fields/Milestone_Type_edit__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Type_edit__c</fullName>
    <inlineHelpText>Created for payment plan editing</inlineHelpText>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Date Linked</fullName>
            </value>
            <value>
                <fullName>Construction Linked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>