force-app/main/default/objects/Payment_Milestones__c/fields/Milestone_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Type_Text__c</fullName>
    <label>Milestone Type Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>