force-app/main/default/objects/Payment_Milestones__c/fields/MVAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>MVAT_Amount__c</fullName>
    <formula>Quotation__r.MVAT_Quot__c *  MVAT_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MVAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>