force-app/main/default/objects/Payment_Milestones__c/fields/Number_Of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days__c</fullName>
    <label>Number Of Days/Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>