force-app/main/default/objects/Payment_Milestones__c/fields/Original_Booking_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Booking_Due_Date__c</fullName>
    <label>Original Booking Due Date</label>
    <type>Date</type>
</CustomField>