force-app/main/default/objects/Payment_Milestones__c/fields/PPLI_Code__c.field-meta.xml
<CustomField>
    <fullName>PPLI_Code__c</fullName>
    <formula>Quotation__r.Payment_Plan__r.Tower__r.Cluster__r.Name &amp;&quot;-&quot;&amp; Quotation__r.Name &amp;&quot;-&quot;&amp; Milestone_Name__c &amp;&quot;-&quot;&amp; Text(Charge1Percentage__c*100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPLI_Code</label>
    <type>Text</type>
</CustomField>